--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
           CF_JIRA_PROJECT_PREFIX: 'CR'
 
           # String starting with the issue ID to associate with image
-          CF_JIRA_MESSAGE: "${{ github.event.pull_request.head.ref }}"
+          CF_JIRA_MESSAGE: 'message'
 
 
         uses: codefresh-io/codefresh-report-image@latest
