--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,18 +49,24 @@ jobs:
           # The git branch relevant to the commit
 #           CF_GIT_BRANCH: '[name-of-your-git-branch]'
 
-          # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
-          # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
-          CF_GITHUB_TOKEN: ${{secrets.PAT_NEW}}
+#           # GitHub Access token !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
+#           # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
+#           CF_GITHUB_TOKEN: ${{secrets.PAT_NEW}}
 
-          # Name of Jira integration
+          # Git branch with the commit  Pull Request data to add to the image. Pass the branch from the event payload used to trigger your action.
+          CF_GIT_BRANCH: ${{ github.event.pull_request.head.ref }}
+
+          # GitHub authentication token. !! Committing a plain text token is a security risk. We highly recommend using encrypted secrets. !!
+          # Documentation - https://docs.github.com/en/actions/security-guides/encrypted-secrets
+          CF_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+          # Issue tracking integration to use to enrich the image.
           CF_JIRA_INTEGRATION: 'jira'
 
-          # Jira project filter
+          # Jira project prefix  identifying the ticket number to use.
           CF_JIRA_PROJECT_PREFIX: 'CR'
 
-          # String starting with the issue ID to associate with image
-          CF_JIRA_MESSAGE: 'message'
-
+          # Search for issue IDs matching this string to associate with your image.
+          CF_JIRA_MESSAGE: ${{ github.event.pull_request.head.ref }}
 
         uses: codefresh-io/codefresh-report-image@latest
