--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           CF_IMAGE: ${{env.CF_IMAGE}}
 
           # Name of Container registry integration
-          CF_CONTAINER_REGISTRY_INTEGRATION: 'docker'
+          CF_CONTAINER_REGISTRY_INTEGRATION: 'dockerhub-test'
 
           # The git branch relevant to the commit
 #           CF_GIT_BRANCH: '[name-of-your-git-branch]'
@@ -61,7 +61,7 @@ jobs:
           CF_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
           # Issue tracking integration to use to enrich the image.
-          CF_JIRA_INTEGRATION: 'jira'
+          CF_JIRA_INTEGRATION: 'jira-test'
 
           # Jira project prefix  identifying the ticket number to use.
           CF_JIRA_PROJECT_PREFIX: 'CR'
